refactor: restructure books API with versioning; implement member and librarian namespaces for books management, this ensures secure usage of endpoints, and organization for frontend
